style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
body{
    background-color: white;
}
.p-hero , .hero-btn, p, .ver-btn{
    font-family: 'Lato', sans-serif;
    font-weight: 300;
    font-size: .8rem;
    letter-spacing: 1px;
}
h1{
    font-family: 'Montserrat', sans-serif;
    font-weight: 400;
    font-size: 60px;
    letter-spacing: 2.4px;
    line-height: 50px;
    color: white;
}
h1 span{
    font-weight: 100;
}
h2{
    font-family: 'Montserrat', sans-serif;
    font-size: 20px;
    letter-spacing: .1rem;
    font-weight: 600;
}

.container{
    margin-top: 0px;
    width: 100%;
    height: 120vh;
    position: relative;
    background-image: url(images/blue-hero-bg.svg);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: bottom;

}

/*   NAV BAR  */
.nav-bar{
    height: 100px;
    margin-top: -1px;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    justify-content: space-between;
    align-items: center;
    padding: 0 5rem;
}
.nav-menu{
    list-style: none;
    display: grid;
    grid-template-columns: repeat(5, auto);
    justify-content: end;
    align-items: center;
    font-family: 'Montserrat', sans-serif;
    font-weight: 300;
    font-size: .7em;
    letter-spacing: 1px;

}
.nav-menu a{
    margin: 0 10px;
    cursor: pointer;
    text-decoration: none;
    color: white;
}
.nav-menu a:hover{
    opacity: .7;
}
#contact{
    border: solid 1px #FFBD0B;
    padding: 5px 8px;
    border-radius: 50px;
}
.logo{
    width: 60px;
    height: auto;
}
.burger div{
    width: 24px;
    height: 2px;
    border-radius: 50px;
    background-color: white;
    margin: 5px;
    transition: all 0.4s ease-out;
    z-index: 3;
}
.burger{
    display: none;
    cursor: pointer;
    
}



/* HERO */

.hero{
    position: relative;
    display: grid;
    grid-template-columns:  1fr 5fr;
    width: 100%;
    height: 70vh;
    padding-left: 80px;
}
.hero-text{
    position: relative;
    overflow: visible;
    height: 70%;
}
.text-cont{
    display: grid;
    row-gap: 25px;
    position: absolute;
    top: 50%;
    transform: translatey(-50%);
    color: white;
}
.hero-btn{
    width: 150px;
    height: 40px;
    border-radius: 50px;
    border: none;
    background-color: orangered;
    color: white;
}
.hero-img{
    width: 100%;
    margin-left: auto;
    margin-top: auto;
}
.hero-animation{
    width: 100%;
    
}

/* SECTION 2*/
.container-2{
    margin-bottom: 50px;
}
.wrapper{
    width: 100%;
    height: auto;
    display: grid;
}
.top-text{
    text-align: center;
    padding: 50px;
    font-family: 'Montserrat', sans-serif;
}
.top-text h2 span{
    font-weight: 300;
}
.first-service, .second-service, .third-service, .four-service{
    width: 100%;
    height: auto;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    align-items: center;
    margin-bottom: -40px;
}
.first-service-text, .second-service-text, .third-service-text, .four-service-text{
    display: grid;
    height: 200px;
    padding: 20px 60px;
    justify-items: start;
    align-content: center;
    row-gap: 20px;
}
.second-service-text, .four-service-text{
    justify-items: end;
    text-align: end;
}

.serv.serv-link{
    color: white;
}
.serv p{
    font-weight: 400;
}
.parallax-laptop{
    position: relative;
    height: 100%;
    display: grid;
    justify-items: right;
}
.parallax-laptop img{
    position: absolute;
}
#laptop{
    position: relative;
    width: 70%;
    z-index: 5;
}
#proce{
    width: 25%;
    right: 10px;
    top: 70%;
    z-index: 6;
}
#rect1{
    width: 10%;
    bottom: -35%;
    left: 150px;
}
#rect2{
    top: 30px;
    left: 150px;
    width: 7%;
    filter: blur(1px);
}#sq1{
    width: 10%;
    right: 30px;
    bottom: -20px;
    filter: blur(6px);
}#sq2{
    width: 20%;
    left: 20px;
    top: 100px;
}
.second-service, .four-service{
    width: 100%;
    height: 500px;
}
.ver-btn{
    font-weight: bold;
    font-size: 12px;
    text-decoration: none;
    color: #6A408E;
}
.serv-link{
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    align-items: center;
    color: #6A408E;
}
.second-service-text .serv-link, .four-service-text .serv-link{
    display: inline;
}
.fas{
    margin-left: 10px;
    font-size: 12px;
}
.second-service-img img{
    width: 90%;
    z-index: -4;
}
.four-service-img{
    display: grid;
    align-items: center;
    justify-items: center;
}
.four-service-img img{
    width: 60%;
    margin-bottom: 100px;
}
footer{
    width: 100%;
    height: 200px;
    background: rgb(0,212,255);
    background: linear-gradient(169deg, rgba(0,212,255,0.5130251929873512) 0%, rgba(151,101,226,0.5802520837436538) 35%, rgba(2,12,100,1) 100%); 
}









/* TABLET HORIZONTAL*/
@media only screen and (max-width: 1024px) {
    .nav-bar{
        grid-template-columns: 1fr 3fr;
    }
    .container-2{
        margin-bottom: 20px;
    }
    .hero{
        width: 90%;
        grid-template-columns: 1fr;
        height: 80vh;
    }
    .text-cont{
        width: 40%;
        top: 160px;
    }
    .text-cont h1{
        font-size: 45px;
        line-height: 40px;
    }
    .hero-img{
        width: 100%;
        margin-right: -10%;
        margin-top: auto;
    }
    
    
   
  }






/*  TABLET VERTICAL*/  
  @media screen and (max-width: 768px) {
      .container{
        overflow: hidden;
      }
      .container-2{
        margin-bottom: 100px;
    }
      .nav-bar{
          padding: 2rem;
      }
    .nav-menu{
        position: absolute;
        z-index: 10;
        right: 0;
        top: 110px;
        width: 200px;
        height: 80vh;
        padding: 120px 90px;
        background: rgb(0,212,255);
        background: linear-gradient(169deg, rgba(0,212,255,.3) 0%, rgba(151,101,226,1) 20%, rgba(2,12,100,.7) 100%); 
        grid-template-columns: 1fr;
        grid-template-rows: repeat(5, 1fr);
        justify-content: space-around;
        text-align: center;
        border-radius: 10px 0 0 10px;
        transform: translateX(100%);
        transition: 0.5s ease-in;
    }
    .nav-menu a{
        opacity: 0;
    }
    .burger{
        display: block;
        margin-left: auto;
    }
    .nav-active{
        transform: translateX(0px);
    }
    .nav-visible{
        opacity: 100%;
    }
    #contact{
        justify-self: center;
        width: 100px;
    }

    .container{
        height: 100vh;
    }
    .hero{
        padding-left: 40px;
        grid-template-rows: 1fr 5fr;
    }
    .text-cont{
        width: 80%;
    }
    .hero-img{
        width: 100%;
    }
    .top-text{
        margin-bottom: 20px;
       }
       .first-service, .second-service, .third-service, .four-service{
        grid-template-columns: 1fr;
        padding: 20px 40px;
        margin-bottom: 20px;
        
        
    }
    .serv{
        padding: 0 50px;
        grid-row-start: 1;
    }
    .parallax-laptop{
        width: 70%;
        transform: translateY(-70px);
        z-index: -4;
    }
    .second-service-img, .four-service-img{
        width: 100%;
        display: grid;
        justify-items: center;
    }
    .second-service-img img{
        width: 60%;
        margin-top: -70px;
        z-index: -4;
       
    }
    .third-service-img{
        margin-top: -80px;
        z-index: -3;
    }
    .four-service-img img{
        width: 50%;
    }
  }



/*MOBILE*/
  @media screen and (max-width: 500px){
      .container{
          height: 110vh;
      }
      .container-2{
        margin-bottom: 10px;
    }
    .hero{
        width: 100%;
        height: 100%;
        overflow: visible;
    }
    .text-cont{
        top: 130px;
        row-gap: 20px;
        z-index: 3;
    }
    .text-cont h1{
        font-size: 35px;
        line-height: 30px;

    }
   .hero-animation{
       position: absolute;
       width: 600px;
       top:210px;
       right: -150px;
       z-index: 2;
   }
   .first-service, .second-service, .third-service, .four-service{
       grid-template-columns: 1fr;
       padding: 0px 40px;
       
       
   }
   .serv{
       padding: 0;
       grid-row-start: 1;
   }
   .top-text{
    margin-bottom: 20px;
   }
   #proce{
       top: 100%;
       right: 0;
   }
   .parallax-laptop{
       z-index: -3;
       width: 100%;
       height: 100%;
       margin-top: 80px;
   }
   .second-service-img img {
    height:  100%;
    width: 100%;
    margin-top: -50px;
    }
    .four-service-img img {
        width: 80%;
    }
    
    .third-service-img{
        margin-top: -40px;
        width: 100%;
    }

   

  }






/* ANIMATIO NAVBAR*/  
  @keyframes navLinksFade {
      from{
        opacity: 0;
        transform: translateX(50px);
      }
      to{
        opacity: 1;
        transform: translateX(0px);
      }
  }
  .cross .line1{
      transform: rotate(135deg) translate(6px, -4px);
  }
  .cross .line2{
    opacity: 0;
  }
  .cross .line3{
    transform: rotate(-135deg) translate(6px, 4px);
  }

